--- a/src/Styles/App.sass
+++ b/src/Styles/App.sass
@@ -4,6 +4,7 @@
   align-items: center
   height: 100vh
   font-family: Arial, Helvetica, sans-serif
+  background-color: #f4f4f4
   .aside
     width: 30%
   .main
