--- a/src/Styles/App.sass
+++ b/src/Styles/App.sass
@@ -1,13 +1,16 @@
 .app 
   display: flex
-  justify-content: center
   align-items: center
-  height: 100vh
+  min-height: 100vh
+  min-width: 100vw
   font-family: Arial, Helvetica, sans-serif
   background-color: #f4f4f4
   .aside
     width: 30%
   .main
     width: 70%
-
+    
+span
+  width: 100%
+  margin: 5px
   
