Comleted CompanyValutionCalc Component and add CompanyValution.sass

--- a/src/Styles/Form.sass
+++ b/src/Styles/Form.sass
@@ -9,6 +9,10 @@ form
       padding: 5px
       margin: 0 10px
       border-radius: 3px
+    input[type='checkbox']
+      margin: 0 10 0 0px
+      padding: 0
+      width: auto
     select
       border: 1px solid black
       min-width: 100px
