--- a/src/Styles/App.sass
+++ b/src/Styles/App.sass
@@ -5,15 +5,7 @@
   min-width: 99vw
   font-family: Arial, Helvetica, sans-serif
   background-color: #f4f4f4
-  .aside
+  .app__aside
     width: 30%
-  .main
+  .app__main
     width: 70%
-    
-p
-  width: 100%
-  margin-top: 10px
-
-span
-  cursor: pointer
-  
