--- a/src/Styles/toMany/Form.sass
+++ b/src/Styles/toMany/Form.sass
@@ -1,25 +1,25 @@
-form
+.form
   position: relative
-  label
+  .form__label
     display: block
     margin: 20px
-    input
+    .form__input
       border: 1px solid black
       width: 100px
       padding: 5px
       margin: 0 10px
       border-radius: 3px
-    input[type='checkbox']
+    .form__input[type='checkbox']
       margin: 0 10 0 0px
       padding: 0
       width: auto
-    select
+    .form__select
       border: 1px solid black
       min-width: 100px
       padding: 5px
       margin: 0 10px
       border-radius: 3px
-  button
+  .form__button
     background-color: #eee
     padding: 10px
     cursor: pointer
