--- a/src/Styles/toMany/Table.sass
+++ b/src/Styles/toMany/Table.sass
@@ -1,15 +1,15 @@
-table
+.table
   width: 95%
   display: block
   margin: 0 auto
   overflow-y: scroll
   max-height: 500px
   margin-top: 15px
-  th
+  .table__th
     background-color: #eee
     padding: 12px
-  td
+  .table__td
     border: 1px solid #ddd
     padding: 12px
-  tr:nth-child(even)
+  .table__tr:nth-child(even)
     background-color: #f2f2f2
