--- a/src/Styles/toMany/Form.sass
+++ b/src/Styles/toMany/Form.sass
@@ -9,7 +9,7 @@
       padding: 5px
       margin: 0 10px
       border-radius: 3px
-    .form__input[type='checkbox']
+    .form__input_type_text
       margin: 0 10 0 0px
       padding: 0
       width: auto
