--- a/src/Styles/toMany/Table.sass
+++ b/src/Styles/toMany/Table.sass
@@ -1,15 +1,21 @@
+$table-width: 95%
+$table-max-height: 500px
+$table-th-background-color: #eee
+$table-border-color: #ddd
+$table-even-row-background-color: #f2f2f2
+
 .table
-  width: 95%
+  width: $table-width
   display: block
   margin: 0 auto
   overflow-y: scroll
-  max-height: 500px
+  max-height: $table-max-height
   margin-top: 15px
-  .table__th
-    background-color: #eee
+  &__th
+    background-color: $table-th-background-color
     padding: 12px
-  .table__td
-    border: 1px solid #ddd
+  &__td
+    border: 1px solid $table-border-color
     padding: 12px
-  .table__tr:nth-child(even)
-    background-color: #f2f2f2
+  &__tr:nth-child(even)
+    background-color: $table-even-row-background-color
